# CommitPilot

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: state.json
docs/: ARCHITECTURE.md  CASE_STUDY.md  QUALITY.md  REVIEW_CHECKLIST.md  ROADMAP.md  guide-100.md  guide-61.md  guide-62.md  guide-63.md  guide-64.md  guide-65.md  guide-66.md  guide-67.md  guide-68.md  guide-69.md  guide-70.md  guide-71.md  guide-72.md  guide-73.md  guide-74.md  guide-75.md  guide-76.md  guide-77.md  guide-78.md  guide-79.md  guide-80.md  guide-81.md  guide-82.md  guide-83.md  guide-84.md  guide-85.md  guide-86.md  guide-87.md  guide-88.md  guide-89.md  guide-90.md  guide-91.md  guide-92.md  guide-93.md  guide-94.md  (+145 more)
docs/feature-notes/: iteration-104.md  iteration-112.md  iteration-120.md  iteration-128.md  iteration-136.md  iteration-144.md  iteration-152.md  iteration-16.md  iteration-160.md  iteration-168.md  iteration-176.md  iteration-184.md  iteration-192.md  iteration-200.md  iteration-208.md  iteration-216.md  iteration-224.md  iteration-24.md  iteration-32.md  iteration-40.md  iteration-48.md  iteration-56.md  iteration-64.md  iteration-72.md  iteration-8.md  iteration-80.md  (+2 more)
scripts/: bump_version.py
src/: cli.py  dateutils.py  goals.py  metrics.py  reports.py  state.py  streak.py  tasks.py
tests/: test_features.py  test_goals.py  test_metrics.py
(+471 files in other folders)
